objects/Offer__c.object
<CustomObject>
    <description>One vacancy can have many job offers issued</description>
    <fields>
        <fullName>Basic_Salary__c</fullName>
        <label>Basic Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_status__c</fullName>
        <label>Offer status</label>
        <picklist>
            <picklistValues>
                <fullName>To Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probationary_period__c</fullName>
        <label>Probationary period</label>
        <picklist>
            <picklistValues>
                <fullName>0M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Job__c</fullName>
        <label>Type of Job</label>
        <picklist>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>Vacancy__c</columns>
        <columns>Location__c</columns>
        <columns>Type_of_Job__c</columns>
        <columns>Probationary_period__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Basic_Salary__c</columns>
        <columns>Offer_status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <nameField>
        <displayFormat>O#-{0000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>